--- a/Baha'i/Others/ROB/V4/p001-010Ch01.html
+++ b/Baha'i/Others/ROB/V4/p001-010Ch01.html
@@ -109,7 +109,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p5">5</a></center><p>
 	   * Non-Bahá'ís. (A.T.)<p>
-	   † For more information about the Arch-breaker of the Covenant see <i>God Passes By</i>, chapter 15, and <i>Revelation of Bahá'u'lláh</i>, vols. <a href="../V1/p351-363Index.html#Covenant-breakers">1</a> and <a href="../V2/p469-476Index.html#Covenant-breakers">2</a>.<p>
+	   † For more information about the Arch-breaker of the Covenant see <i>God Passes By</i>, <a href="../../../SE/GPB/p235-320ThirdPeriod.html#p244">chapter 15</a>, and <i>Revelation of Bahá'u'lláh</i>, vols. <a href="../V1/p351-363Index.html#Covenant-breakers">1</a> and <a href="../V2/p469-476Index.html#Covenant-breakers">2</a>.<p>
 	   <hr>
 	   2. <i>Bihjatu's-Sudúr</i>, pp. 251-2.
 	   </small></td>
