--- a/Baha'i/Others/ROB/V4/p033-049Ch03.html
+++ b/Baha'i/Others/ROB/V4/p033-049Ch03.html
@@ -42,6 +42,9 @@
        <td VALIGN=top><small><center><a name="p33">33</a></center><p>
 	   * For his life see vol. 1, pp. <a href="../V1/p084-095Ch07.html#p91">91</a>-5, and vol. 2, pp. <a href="../V2/p029-054Ch02.html#p42">42</a>-3, <a href="../V2/p337-369Ch16.html#p341">341</a>-6.<p>
 	   † This Tablet has been translated into English in its entirety and is published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para384">pp. 137</a>-52.
+	   <hr>
+	   <hr>
+	   [Lawh-i-Hikmat] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para292">p. 219</a>
 	   </small></td>
 </tr>
 <tr>
@@ -112,7 +115,7 @@
 </tr>
 <tr>
        <td>
-	   in Bahá'. Soghi Effendi, the Guardian of the Faith, has explained these two terms in the following passage, which is translated from Persian.<p>
+	   in Bahá'. Shoghi Effendi, the Guardian of the Faith, has explained these two terms in the following passage, which is translated from Persian.<p>
 	   <blockquote>In this holy cycle the 'learned' are, on the one hand, the Hands of the Cause of God, and, on the other, the teachers and diffusers of His teachings who do not rank as hands, but who have attained an eminent position in the teaching work. As to the 'rulers', they refer to the members of the Local, National and International Houses of Justice.<small><sup>8</sup></small></blockquote>
 	   Bahá'u'lláh has paid glowing tribute to the 'learned in Bahá' in the <i>Kitáb-i-Aqdas</i>. We have referred to this in a previous volume.*<p>
 	   The exalted counsels of the Tablet of Hikmat are in marked contrast to the way in which the great majority of the peoples of the world are conducting their lives today. However, a careful study of the Mission of Bahá'u'lláh makes it clear that His Faith is destined to embrace the whole of the human race, and that in the fullness of time these exhortations are designed to exert the greatest influence upon the life of man on this planet, to revolutionize human society and shape the conduct of its individual members in accordance with His heavenly teachings.<p>
