--- a/Baha'i/Others/ROB/V4/p091-102Ch06.html
+++ b/Baha'i/Others/ROB/V4/p091-102Ch06.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p073-090Ch05.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p103-117Ch07.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -38,16 +38,19 @@
 	   <h2>A Divine Rebuke</h2>
 	   <big><big><i>Lawh-i-Burhán</i></big></big>
 	   </center><p>
-
+	   
 	   Soon after the martyrdom of the King and Beloved of the Martyrs, Bahá'u'lláh wrote the <i>Lawh-i-Burhán</i> (Tablet of the Proof) addressed to Shaykh Báqir (the Wolf). In it He strongly condemned his evil action. He also addressed Mír Muhammad Husayn (the She-Serpent) and sternly rebuked him for his part. The strong language that Bahá'u'lláh uses in this Tablet* is indicative of the wrath of God descending upon these two embodiments of wickedness.<p>
 	   Between the two, they have been stigmatized by Bahá'u'lláh as 'the heedless one', 'the perverse hater', 'the ignorant' who had 'gone far astray', who was 'engulfed in evident folly', 'wrapped in thick veil', and had 'joined partners with God'. Both are denounced for a heinous crime as a result of which the 'Apostle' (the Prophet Muhammad) lamented, 'the hearts of the Concourse on high' were consumed, 'the soul of the Chaste One'† melted, the inmates of Paradise' wept, 'Gabriel'‡ was made to groan, 'all created things' lamented, 'the limbs of the holy ones' quaked, and 'darkness fell upon all regions'.<p>
 	   To Shaykh Báqir, the Wolf, who had penned the death warrant, Bahá'u'lláh declares:<p>
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p91">91</a></center><p>
-	   * Translated into English and published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#p203">pp. 205</a>-16.<p>
-	   † Fátimih, daughter of the Prophet Muhammad, the holiest woman in Islám.<p>
+	   * Translated into English and published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#p203">pp. 205</a>-16.<p> 
+	   † Fátimih, daughter of the Prophet Muhammad, the holiest woman in Islám.<p> 
 	   ‡ The Angel which appeared to Muhammad as the embodiment of the Holy Spirit.
+	   <hr>
+	   <hr>
+	   [Lawh-i-Burhán] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para243">p. 200</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para292">p. 219</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para324">p. 232</a>
 	   </small></td>
 </tr>
 <tr>
@@ -86,7 +89,7 @@
 	   The power and ascendancy of Bahá'u'lláh, deriving from the all-pervasive influence of the Most Great Spirit of God, are clearly manifested in this Tablet when He proclaims His station in unequivocal language and with forcefulness and supreme authority to a man who at that time wielded the sceptre of power in his hands. A human being, however capable, however aided by his own knowledge and strength, will never be able to utter commanding words such as these:<p>
 	   <blockquote>By God! Troubles have failed to unnerve Me, and the repudiation of the divines hath been powerless to weaken Me. I have spoken, and still speak forth before the face of men: 'The door of grace hath been unlocked and He Who is the Dayspring of justice is come with perspicuous signs and evident testimonies from God, the Lord of strength and of might!' Present thyself before Me that thou mayest hear the mysteries which were heard by the Son of 'Imrán* upon the Sinai of Wisdom. Thus commandeth thee He Who is the Dawning-Place of the Revelation of thy Lord, the God of Mercy, from His great Prison.<small><sup>5</sup></small><p></blockquote>
 	   Thus the summons of the Lord of Hosts was issued with the hands of power and might, and called the Shaykh to come into His presence and see what the Prophets of God had longed to witness.<p>
-	   In this Tablet Bahá'u'lláh through His loving-kindness
+	   In this Tablet Bahá'u'lláh through His loving-kindness 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p94">94</a></center><p>
@@ -111,7 +114,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p95">95</a></center><p>
 	   <hr>
-	   6. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para585">p. 213</a>.<p>
+	   6. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para585">p. 213</a>.<p> 
 	   7. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para574">p. 205</a>.
 	   <hr>
 	   [Rely not on thy glory...] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para159">p. 99</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3, <a href="../V3/p147-173Ch08.html#p163">p. 163</a>
@@ -140,20 +143,20 @@
        <td>
 	   <blockquote>Sálih,* nor the Jews with the Spirit of God, the Lord of all being.<small><sup>10</sup></small></blockquote>
 	   Reminding him that he cannot destroy the Cause of God, Bahá'u'lláh addresses the She-Serpent in these words:<p>
-	   <blockquote>...O perverse hater! Didst thou imagine that martyrdom could abase this Cause? Nay, by Him Whom God hath made to be the Repository of His Revelation, if thou be of them that comprehend. Woe betide thee, O thou who hast joined partners with God, and woe betide them that have taken thee as their leader, without a clear token or a perspicuous Book.<small><sup>11</sup></small></blockquote>
+	   <blockquote>...O perverse hater! Didst thou imagine that martyrdom could abase this Cause? Nay, by Him Whom God hath made to be the Repository of His Revelation, if thou be of them that comprehend. Woe betide thee, O thou who hast joined partners with God, and woe betide them that have taken thee as their leader, without a clear token or a perspicuous Book.<small><sup>11</sup></small></blockquote> 
 	   And finally He foreshadows his extinction:<p>
 	   <blockquote>...O heedless outcast! Ere long will the breaths of chastisement seize thee, as they seized others before thee. Wait, O thou who hast joined partners with God, the Lord of the visible and the invisible.<small><sup>12</sup></small></blockquote>
 	   And again:<p>
 	   <blockquote>Thou hast clung to tyranny and cast away justice; whereupon all created things have lamented, and still thou art among the wayward. Thou hast put to death the aged, and plundered the young. Thinkest thou that thou wilt consume that which thine iniquity hath amassed? Nay, by Myself! Thus informeth thee He Who is cognizant of all. By God! The things thou possessest shall profit thee not, nor what thou hast laid up through thy cruelty. Unto this beareth witness Thy Lord, the All-Knowing. Thou hast arisen to put out the light of this Cause; ere long will thine own fire be quenched, at His behest. He, verily, is the Lord of strength and of might.<small><sup>13</sup></small></blockquote>
 	   As we shall see, divine chastisement descended upon him almost at the same time as these words were being revealed by Bahá'u'lláh. It began with a series of grave setbacks culminating in his exile from his native city and later his death in miserable circumstances.<p>
-	   In the <i>Lawh-i-Burhán</i> Bahá'u'lláh also addresses the divines of
+	   In the <i>Lawh-i-Burhán</i> Bahá'u'lláh also addresses the divines of 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p97">97</a></center><p>
 	   * see <a href="p425-428Apndx_I.html">Appendix I</a>.<p>
 	   <hr>
-	   10. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para587">p. 214</a>.<p>
-	   11. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para587">p. 215</a>.<p>
+	   10. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para587">p. 214</a>.<p> 
+	   11. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para587">p. 215</a>.<p> 
 	   12. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para587">p. 214</a>.<p>
 	   13. <i>ibid</i>. pp. <a href="../../../Baha/TOB/p001-270TOB.html#para587">215</a>-16.
 	   <hr>
@@ -198,7 +201,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p99">99</a></center><p>
 	   <hr>
-	   18. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para177">pp. 61</a>-2.<p>
+	   18. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para177">pp. 61</a>-2.<p> 
 	   19. <i>Synopsis</i>, p. 26.<p>
 	   <hr>
 	   ["O concourse of divines! When..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para165">&para;165</a><p>
@@ -221,14 +224,14 @@
 	   The disease mentioned above is said to have been a cancer of the throat which caused a huge abscess on his neck; the pain and the foul odour were intolerable. It is reported that when the martyrdom of the King and Beloved of the Martyrs was being discussed, some were hesitant to put them to death. The Imám became very angry at this: placing his hands upon his neck he said, 'If there be any sin in this let it be upon my neck!'<p>
 	   The Prince, Zillu's-Sultán, whom Bahá'u'lláh has stigmatized as 'the infernal tree' also fell from grace. He who once ruled over two-thirds of Persia, who made the greatest effort and even secured the support of the British government in fulfilling his long-cherished ambition to become the heir to the throne, and who had assembled such pomp and majesty around himself as to rival those of the King--such a man went steadily into dcline, his position and authority lowered, and his hopes and aspirations frustrated. In the end he was sent to Europe as an exile, and was only allowed to return home when suffering from melancholia. Later he died in ignominy.<p>
 	   It is interesting to note that this ignoble Prince had the temerity to send a letter in his own handwriting to Bahá'u'lláh asking Him to allow His followers to support him to overthrow the King, his own father. In return, he undertook to assist the Bahá'ís if he became king. He sent this letter through Hájí Muhammad-'Alíy-i-Sayyáh,* a two-faced political figure whom Bahá'u'lláh has stigmatized as Jáhil (the Ignorant One). Bahá'u'lláh responded firmly, telling Sayyáh that it was incumbent upon the Prince to pray for the King and be his well-wisher and not to wish to overthrow him. He stated that it was not His mission to interfere in political affairs but to improve the character of men. He also forbade him to make such a request of Him ever again.<p>
-	   Hájí Mírzá Habíb-i-Afnán† has recorded in his memoirs that
+	   Hájí Mírzá Habíb-i-Afnán† has recorded in his memoirs that 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p101">101</a></center><p>
 	   * Not to be confused with 'Alíy-i-Sayyáh, a faithful disciple of the Báb and Bahá'u'lláh.<p>
 	   † see below, pp. <a href="p329-350Ch22.html#p332">332</a>-6.<p>
 	   <hr>
-	   20. <i>God Passes By</i>, pp. 232-3.
+	   20. <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para324">232</a>-3.
 	   </small></td>
 </tr>
 <tr>
@@ -247,7 +250,7 @@
        <td>
 	   	   <FORM ACTION="p073-090Ch05.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -255,12 +258,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p103-117Ch07.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
