--- a/Baha'i/Others/ROB/V4/p118-144Ch08.html
+++ b/Baha'i/Others/ROB/V4/p118-144Ch08.html
@@ -45,6 +45,9 @@
 	   * This Tablet has been translated in full into English and published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#p45">pp. 47</a>-54.<p>
 	   † In the old days in Persia there were no colleges or universities in which students might graduate in the fields of science, art or technology. Those who were described as 'builder-architects' had learned their trade through practical experience working as apprentices to the great master-builders of the time.<p>
 	   ‡ see above, <a href="p033-049Ch03.html">ch. 3</a>.
+	   <hr>
+	   <hr>
+	   [Tajallíyát] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>
 	   </small></td>
 </tr>
 <tr>
@@ -112,7 +115,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p123">123</a></center><p>
 	   <hr>
-	   2. <i>God Passes By</i>, p. 300.
+	   2. <i>God Passes By</i>, <a href="../../../SE/GPB/p235-320ThirdPeriod.html#para129">p. 300</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -128,7 +131,7 @@
 <tr>
        <td>
 	   Tablets in his honour. 'Abdu'l-Bahá also honoured him with many Tablets.<p>
-	   When Ustád 'Alí-Akbar received the Tablet of Tajallíyát he was particularly fascinated by it, as Bahá'u'lláh had sent him pages of 'revelation-writing' along with the text of the Tablet. When Tablets were revealed, Mírzá Áqá Ján, Bahá'u'lláh's amanuensis, usually took them down. But the speed of revelation was so fast that his handwriting, known as revelation-writing, was practically illegible. We have discussed this subject more fully in a previous volume.<p>
+	   When Ustád 'Alí-Akbar received the Tablet of Tajallíyát he was particularly fascinated by it, as Bahá'u'lláh had sent him pages of 'revelation-writing' along with the text of the Tablet. When Tablets were revealed, Mírzá Áqá Ján, Bahá'u'lláh's amanuensis, usually took them down. But the speed of revelation was so fast that his handwriting, known as revelation-writing, was practically illegible. We have discussed this subject more fully in a previous volume.<sup>*</sup><p>
 	   <b>The Station of Bahá'u'lláh</b><p>
 	   In the Tablet of Tajallíyát Bahá'u'lláh reveals a glimpse of the transcendent splendour of His Revelation. In a few passages He extols the Mission of its Author in such wise that some may find it difficult to appreciate. It is interesting to note that Bahá'u'lláh often repeats a certain subject in His Writings, but each time it is freshly revealed and expressed in a different way. One subject, however, appears more than any other in the Writings of Bahá'u'lláh: one can hardly come across a Tablet which does not expound the greatness of His Revelation and the exalted station of its Author.<p>
 	   This recurring theme is the cornerstone of Bahá'u'lláh's Message to mankind. He constantly reiterates that He has ushered in the Day of God. For instance, the following utterances selected at random reveal this outstanding feature of His transcendent Revelation. These highly significant passages are the cause of supreme felicity and exhilaration for His loved ones who have truly recognized His station. On the other hand, the same passages may be misconstrued by those who are not endowed with true understanding, or by those motivated by malice. Indeed, many of Bahá'u'lláh's adversaries falsely accused
