--- a/Baha'i/Others/ROB/V4/p161-167Ch10.html
+++ b/Baha'i/Others/ROB/V4/p161-167Ch10.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p145-160Ch09.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p168-176Ch11.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -38,13 +38,15 @@
 	   <big><big><i>Bishárát</i></big></big></center><p>
 	   It has not been possible so far to identify the person for whom the Tablet of Bishárát (Glad-Tidings) was revealed.* On the other hand, Bahá'u'lláh after the preamble, addresses the peoples of the world. The tone of His utterances throughout the Tablet indicate that possibly it was addressed to mankind as a whole and not to a particular individual.<p>
 	   In this Tablet there are fifteen headings, each one designated as a Bishárát. Many of the subjects addressed relate to existing beliefs, to practices carried out by the followers of past religions. The first of these Glad-tidings is the abolition of the law of holy war practised by the Muslims. The teachings of Bahá'u'lláh, all revolving around the principle of love and unity among the peoples of the world, are utterly incompatible with war of any kind. In most of His Tablets Bahá'u'lláh has clearly stated that any action which could bring about coolness between people or cause unhappiness among them is unacceptable in the sight of God today.<p>
-	   In a Tablet<small><sup>1</sup></small> He describes the qualification of a true believer by saying: he is to be counted among the 'People of Bahá', who when retiring at night can say that his heart is completely devoid of any trace of hate or enmity towards his fellowman, and who in his prayers he is a well-wisher of all that dwell on earth. Among the
+	   In a Tablet<small><sup>1</sup></small> He describes the qualification of a true believer by saying: he is to be counted among the 'People of Bahá', who when retiring at night can say that his heart is completely devoid of any trace of hate or enmity towards his fellowman, and who in his prayers he is a well-wisher of all that dwell on earth. Among the 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p161">161</a></center><p>
 	   * This Tablet has been translated in full into English and published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para37">pp. 21</a>-9.<p>
 	   <hr>
 	   1. Unpublished compilation, National Archives Committee, no. 27, p. 491.
+	   <hr>
+	   [Bishárát] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>
 	   </small></td>
 </tr>
 <tr>
@@ -53,13 +55,13 @@
 	   <blockquote>O people! Consort with the followers of all religions in a spirit of friendliness and fellowship.<small><sup>2</sup></small></blockquote>
 	   In this Tablet Bahá'u'lláh advocates the adoption of a universal language, advises the sovereigns of the world or their ministers* to choose a new or an existing language for the purpose, confirms the establishment of the Lesser Peace,† exhorts His followers to honesty and truthfulness towards the governments of the world, recommends constitutional monarchy in preference to a presidential system‡ and permits the study of arts and sciences which 'would redound to the progress and advancement of the people'. That Bahá'u'lláh uses the word 'permission' for the study of sciences is due to the fact that the Muslim clergy in their fanaticism had forbidden the study of modern science. They claimed that such sciences were satanic as they had originated from those who did not believe in Islám.<p>
 	   One of the Glad-tidings concerning some of the duties of the Universal House of Justice is cited also in the <i>Lawh-i-Ishráqát</i>. Occasionally in some of His writings, Bahá'u'lláh includes passages from Tablets previously revealed, often with slight changes.§<p>
-	   One of the great bounties of this Dispensation is that Bahá'u'lláh has abolished the practice of idleness in the name of religion. There are many who think that a godly and spiritual person is one who renounces the world, leads an ascetic life and goes into seclusion. These practices are against the teachings of Bahá'u'lláh. In many of His Tablets He has stated that leading a cloistered life is not conducive to spirituality; it has the opposite effect. There are also a group of people, among them religious
+	   One of the great bounties of this Dispensation is that Bahá'u'lláh has abolished the practice of idleness in the name of religion. There are many who think that a godly and spiritual person is one who renounces the world, leads an ascetic life and goes into seclusion. These practices are against the teachings of Bahá'u'lláh. In many of His Tablets He has stated that leading a cloistered life is not conducive to spirituality; it has the opposite effect. There are also a group of people, among them religious 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p162">162</a></center><p>
 	   * see above, p. <a href="p145-160Ch09.html#p159">159</a>.<p>
 	   † see above, p. <a href="p145-160Ch09.html#p159">159</a>.<p>
-	   ‡ for further discussion of this subject see vol. 3, pp. <a href="../V3/p147-173Ch08.html#p156">156</a>-61.<p>
+	   ‡ for further discussion of this subject see vol. 3, pp. <a href="../V3/p147-173Ch08.html#p156">156</a>-61.<p> 
 	   § see below, pp. <a href="p368-390Ch24.html#p372">372</a>-4.<p>
 	   <hr>
 	   2. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para45">p. 22</a>.
@@ -72,7 +74,7 @@
 	   And again:<p>
 	   <blockquote>
 	   It is enjoined upon every one of you to engage in some form of occupation, such as crafts, trades and the like. We have graciously exalted your engagement in such work to the rank of worship unto God, the True One. Ponder ye in your hearts the grace and the blessings of God and render thanks unto Him at eventide and at dawn. Waste not your time in idleness and sloth. Occupy yourselves with that which profiteth yourselves and others. Thus hath it been decreed in this Tablet from whose horizon the day-star of wisdom and utterance shineth resplendent.<p>
-	   The most despised of men in the sight of God are those who sit idly and beg. Hold ye fast unto the cord of material means, placing your whole trust in God, the Provider of all means. When anyone occupieth himself in a craft or trade, such occupation itself is regarded in the estimation of God as an act
+	   The most despised of men in the sight of God are those who sit idly and beg. Hold ye fast unto the cord of material means, placing your whole trust in God, the Provider of all means. When anyone occupieth himself in a craft or trade, such occupation itself is regarded in the estimation of God as an act 
 	   </blockquote>
 	   </td>
        <td></td>
@@ -96,7 +98,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p164">164</a></center><p>
 	   <hr>
-	   5. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para72">p. 26</a>.<p>
+	   5. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para72">p. 26</a>.<p> 
 	   6. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para61">p. 24</a>.<p>
 	   7. Quoted by A. Sulaymání, <i>Masábih-i-Hidáyat</i>, vol. 1, p. 488.
 	   </small></td>
@@ -106,7 +108,7 @@
 	   Bahá'u'lláh when he prays at the graveside of a holy soul because that soul is endowed with divine bounties. In another Tablet<small><sup>8</sup></small> He states that the resting-places of the holy souls deserve to be honoured and respected. But the honour is not given to the earth, rather it is intended for the soul which is sanctified from all material things. However, since the soul was once associated with the body, it is only natural that we respect the earthly remains of holy ones. But it is not proper to seek assistance and confirmations from any source except from the Blessed Beauty.<p>
 	   In a Tablet<small><sup>9</sup></small> 'Abdu'l-Bahá explains the difference between travelling from country to country with the specific intention of visiting graves of the departed (which is the act disapproved by Bahá'u'lláh) and that of visiting those which are accessible to the individual either in his own country or if he comes across them elsewhere, a practice which is encouraged by the teachings of the Faith. Visits, for instance, to the graves of the martyrs or great teachers of the Faith are conducive to attracting divine bounties. Indeed, Bahá'u'lláh and 'Abdu'l-Bahá have both revealed several Tablets of visitation for specific individuals after their death, which are intended to be recited at their graveside. And in some cases 'Abdu'l-Bahá has asked certain individual Bahá'ís to visit the grave of a devoted believer and chant a special Tablet of visitation on His behalf.<p>
 	   The prohibition by Bahá'u'lláh of making special long journeys to the resting-places of the dead does not in any way refer to pilgrimage to the Holy Shrines of the Faith which normally requires the pilgrim to travel long distances. On the contrary, Bahá'u'lláh has enjoined formal pilgrimages* to the House of the Báb in Shíráz and that of Bahá'u'lláh in Baghdád, and has ordained the performance of certain rituals in connection with these pilgrimages. The pilgrimage to the Shrines of Bahá'u'lláh and the Báb is free from these rites and is considered as one of the greatest bounties which the soul may receive on this earth.<p>
-	   Another law which Bahá'u'lláh has abolished in the Tablet of
+	   Another law which Bahá'u'lláh has abolished in the Tablet of 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p165">165</a></center><p>
@@ -127,7 +129,7 @@
 </tr>
 <tr>
        <td>
-	   <blockquote>thus paving the way for the coming of Bahá'u'lláh. To assert the independence of the new Dispensation, and to prepare also the ground for the approaching Revelation of Bahá'u'lláh the Báb had therefore to reveal very severe laws, even though most of them were never enforced. But the mere fact that He revealed them was in itself a proof of the independent character of His Dispensation and was sufficient to create such widespread agitation, and excite such opposition on the part of the clergy that led them to cause His eventual martyrdom.<small><sup>10</sup></small></blockquote>
+	   <blockquote>thus paving the way for the coming of Bahá'u'lláh. To assert the independence of the new Dispensation, and to prepare also the ground for the approaching Revelation of Bahá'u'lláh the Báb had therefore to reveal very severe laws, even though most of them were never enforced. But the mere fact that He revealed them was in itself a proof of the independent character of His Dispensation and was sufficient to create such widespread agitation, and excite such opposition on the part of the clergy that led them to cause His eventual martyrdom.<small><sup>10</sup></small></blockquote> 
 	   Bahá'u'lláh's closing remarks in the <i>Lawh-i-Bishárát</i> are indicative of the importance of this and similar Tablets revealed after the <i>Kitáb-i-Aqdas</i>, Tablets which set out basic teachings and principles of His Faith.<p>
 	   <blockquote>
 	   In former religions such ordinances as holy war, destruction of books, the ban on association and companionship with other peoples or on reading certain books had been laid down and affirmed according to the exigencies of the time; however, in this mighty Revelation, in this momentous Announcement, the manifold bestowals and favours of God have overshadowed all men, and from the horizon of the Will of the Ever-Abiding Lord, His infallible decree hath prescribed that which We have set forth above.<p>
@@ -137,7 +139,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p167">167</a></center><p>
 	   <hr>
-	   10. <i>Dawn of a New Day</i>, pp. 77-8.<p>
+	   10. <i>Dawn of a New Day</i>, pp. 77-8.<p> 
 	   11. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para83">p. 28</a>.
 	   </small></td>
 </tr>
@@ -149,7 +151,7 @@
        <td>
 	   	   <FORM ACTION="p145-160Ch09.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -157,12 +159,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p168-176Ch11.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
