--- a/Baha'i/Others/ROB/V4/p168-176Ch11.html
+++ b/Baha'i/Others/ROB/V4/p168-176Ch11.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p161-167Ch10.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p177-189Ch12.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -40,7 +40,7 @@
 	   <blockquote>
 	   <i>In My Name, which standeth supreme above all names</i><p>
 	   Praise and glory beseem the Lord of Names and the Creator of the heavens, He, the waves of Whose ocean of Revelation surge before the eyes of the peoples of the world. The Day-Star of His Cause shineth through every veil and His Word of affirmation standeth beyond the reach of negation. Neither the ascendancy of the oppressor nor the tyranny of the wicked hath been able to thwart His Purpose. How glorified is His sovereignty, how exalted His dominion!<p>
-	   Great God! Although His signs have encompassed the
+	   Great God! Although His signs have encompassed the 
 	   </blockquote>
 	   </td>
        <td></td>
@@ -48,6 +48,9 @@
 	   * The text of this Tablet is translated in full into English, see <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para87">pp. 33</a>-44.<p>
 	   † Bahá'u'lláh states that the meaning of the Word of God cannot be exhausted. For further information see vol. 1, p. <a href="../V1/p018-044Ch03.html#p32">32</a>.<p>
 	   ‡ For further discussion see vol. 3, pp. <a href="../V3/p087-107Ch05.html#p94">94</a>-6.
+	   <hr>
+	   <hr>
+	   [Tarázát] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>
 	   </small></td>
 </tr>
 <tr>
@@ -67,7 +70,7 @@
        <td>
 	   sun there would be no passage of time as experienced on earth. The Manifestation of God and His knowledge of the future may be likened to an experienced farmer who can see, in his mind's eye, inside a tiny seed a large tree laden with fruit. He knows that once it is sown in the soil, the seed will germinate and a tree will begin to grow in its place.<p>
 	   There are many stories attributed to Bahá'u'lláh, 'Abdu'l-Bahá and Shoghi Effendi which further illustrate this point. For example, Dr Habíb Mu'ayyad has left to posterity the following account in his memoirs. It describes in vivid terms the vision of 'Abdu'l-Bahá about the future of Mount Carmel and the Shrine of the Báb. When 'Abdu'l-Bahá spoke these ords Mount Carmel was a heap of rocks and uninhabited; today much of His vision has been fulfilled.<p>
-	   <blockquote>On one occasion when 'Abdu'l-Bahá was strolling in the gardens {near the Shrine of the Báb} His eyes were focused upon the sea and the city of 'Akká for some time. After a few moments of silence, He said, 'I have seen many places abroad, but nowhere has the fresh air and the beautiful scenery of the Shrine of the Báb.* Ere long this mountain will become habitable. Many fine buildings will be built on it. The Shrine of the Báb will be constructed in the most exquisite fashion and will appear with the utmost beauty and magnificence. Terraces will be built from the bottom of the mountain to the top. Nine terraces from the bottom to the Shrine and nine terraces from the Shrine to the summit. Gardens with colourful flowers will be laid down on all these terraces. A single street lined with flower beds will link the seafront to the Shrine. Pilgrims who arrive by ship will be able to see the dome of the Shrine from a long distance out at sea. The kings of the earth, bare-headed, and the queens, will walk up the street of the Shrine carrying bouquets of flowers. With bowed heads they will arrive as pilgrims, and prostrate themselves at the sacred threshold...<small><sup>2</sup></small>†</blockquote>
+	   <blockquote>On one occasion when 'Abdu'l-Bahá was strolling in the gardens {near the Shrine of the Báb} His eyes were focused upon the sea and the city of 'Akká for some time. After a few moments of silence, He said, 'I have seen many places abroad, but nowhere has the fresh air and the beautiful scenery of the Shrine of the Báb.* Ere long this mountain will become habitable. Many fine buildings will be built on it. The Shrine of the Báb will be constructed in the most exquisite fashion and will appear with the utmost beauty and magnificence. Terraces will be built from the bottom of the mountain to the top. Nine terraces from the bottom to the Shrine and nine terraces from the Shrine to the summit. Gardens with colourful flowers will be laid down on all these terraces. A single street lined with flower beds will link the seafront to the Shrine. Pilgrims who arrive by ship will be able to see the dome of the Shrine from a long distance out at sea. The kings of the earth, bare-headed, and the queens, will walk up the street of the Shrine carrying bouquets of flowers. With bowed heads they will arrive as pilgrims, and prostrate themselves at the sacred threshold...<small><sup>2</sup></small>†</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p170">170</a></center><p>
@@ -101,7 +104,7 @@
 	   <blockquote>The Day-Star of His Cause shineth through every veil and His Word of affirmation standeth beyond the reach of negation.<small><sup>4</sup></small></blockquote>
 	   Everything which is derived from the Revelation of Bahá'u'lláh, be it His words, His teachings, His laws or His Covenant, are all revealed in the affirmative. And everything which comes from the ungodly, the enemies and the Covenant-breakers, are all in the negative. In the Tablet of Salmán Bahá'u'lláh explains that in the Islámic Dispensation the letter of negation stood above that of affirmation. Those among the followers of Muhammad who disregarded His wishes about the appointment of His successor and violated His wishes after His passing, dominated over the faithful ones and ruled over them for centuries. In that same Tablet Bahá'u'lláh gives the reasons for this and emphatically states that in this Dispensation He has taken out the letter of negation and substituted for it the letter of affirmation, meaning that the enemies of the Cause, and particularly the Covenant-breakers, will never be able to dominate or rule over the community of the Most Great Name. 'This is a day that shall not be followed by night', is a promise of Bahá'u'lláh.<p>
 	   The subject of 'affirmation' and 'negation' is a deep and fascinating one, but to discuss it any further would result in the repetition of some of the contents of previous volumes, as we have referred to this subject in detail previously.*<p>
-	   In the same opening paragraph, Bahá'u'lláh refers to the 'ascendancy of the oppressor' and the 'tyranny of the wicked'. These terms often appear in the Writings of Bahá'u'lláh. In one of His Tablets revealed in 1882-3<small><sup>5</sup></small> He categorically states that the terms revealed in the Writings such as 'veils', 'oppressors', 'wicked ones', 'embodiments of tyranny' and any other word from
+	   In the same opening paragraph, Bahá'u'lláh refers to the 'ascendancy of the oppressor' and the 'tyranny of the wicked'. These terms often appear in the Writings of Bahá'u'lláh. In one of His Tablets revealed in 1882-3<small><sup>5</sup></small> He categorically states that the terms revealed in the Writings such as 'veils', 'oppressors', 'wicked ones', 'embodiments of tyranny' and any other word from 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p172">172</a></center><p>
@@ -116,7 +119,7 @@
 	   which the odour of wrath is inhaled, means the divines and religious leaders* the world over, those who appear to be walking in the pathway of error.<p>
 	   Several themes of the Tablet of Tarázát are taken up in Tablets already described in preceding chapters. These include the celebrated passage about trustworthiness,† Bahá'u'lláh's exhortations to associate with all kindreds and peoples of the earth, and the commandment to study arts and sciences. In this Tablet Bahá'u'lláh asserts that 'in this Day whatsoever serveth to reduce blindness and to increase vision is worthy of consideration'.<small><sup>6</sup></small> He also states that 'keenness of understanding is due to keenness of vision'. He exhorts His followers to adorn themselves with the 'saintly attributes and character of the Concourse on High', urges them to fix their gaze 'under all conditions upon justice and fairness', admonishes them not to 'deny any soul the reward due to him', advises them to appreciate the craftsmanship of the people of the West, asks them to treat such craftsmen with deference, and enjoins on them not to 'defile their tongues with abuse'.<p>
 	   In this Tablet, too, Bahá'u'lláh grieves that 'truthfulness and sincerity are sorely afflicted in the clutches of falsehood, and justice is tormented by the scourge of injustice', observes that corruption has spread throughout the world, deplores the arming of the nations and the clashing of the swords, describes the pages of newspapers as the 'mirror of the world', and delineates guidelines for their editorial staff, urging the 'writers thereof to be purged from the promptings of evil passions and desires and to be attired with the raiment of justice and equity. They should enquire into situations as much as possible and ascertain the facts, then set them down in writing.' How vast is the difference between these guidelines and the system which prevails at present!<p>
-	   Towards the end of the Tablet of Tarázát, Bahá'u'lláh turns
+	   Towards the end of the Tablet of Tarázát, Bahá'u'lláh turns 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p173">173</a></center><p>
@@ -167,7 +170,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p176">176</a></center><p>
 	   <hr>
-	   9. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para244">p. 79</a>.<p>
+	   9. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para244">p. 79</a>.<p> 
 	   10. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para127">p. 42</a>.
 	   </small></td>
 </tr>
@@ -178,7 +181,7 @@
        <td>
 	   	   <FORM ACTION="p161-167Ch10.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -186,12 +189,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p177-189Ch12.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
