--- a/Baha'i/Others/ROB/V4/p214-226Ch15.html
+++ b/Baha'i/Others/ROB/V4/p214-226Ch15.html
@@ -39,10 +39,13 @@
 	   In this Tablet Bahá'u'lláh calls upon 'the People of Bahá to render the Lord victorious through the power of their utterance and to admonish the people by their goodly deeds and character'. He declares that man will be exalted through 'honesty, virtue, wisdom and saintly character'; considers the 'fear of God' to be 'a sure defence and a safe stronghold for all the peoples of the world';† enjoins upon the world's rulers, its divines and the wise 'to uphold the cause of religion' and regard it as 'the chief instrument for the establishment of order in the world and of tranquillity amongst its peoples'; acclaims the greatness of His Day;‡ counsels His followers 'to adhere tenaciously to unity and concord'; urges them 'to labour diligently in promoting the Cause of God'; admonishes the 'men of wisdom among nations' to shut their 'eyes to estrangement', to fix their 'gaze upon unity', to 'cleave tenaciously unto that which will lead to the well-being
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p1">1</a></center><p>
+       <td VALIGN=top><small><center><a name="p214">214</a></center><p>
 	   * A full translation of this Tablet is published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para162">pp. 57</a>-80.<p>
 	   † For a further discussion on this subject see above pp. <a href="p011-032Ch02.html#p27">27</a>-8.<p> 
 	   ‡ see above, pp. <a href="p118-144Ch08.html#p125">125</a>-39.
+	   <hr>
+	   <hr>
+	   [Kalimát-i-Firdawsíyyih] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>
 	   </small></td>
 </tr>
 <tr>
