--- a/Baha'i/Others/ROB/V4/p315-328Ch21.html
+++ b/Baha'i/Others/ROB/V4/p315-328Ch21.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p294-314Ch20.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p329-350Ch22.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -74,9 +74,9 @@
 	   <hr>
 	   3. Unpublished compilation, National Archives Committee, no. 28, p. 157.<p>
 	   4. <i>ibid</i>. p. 190.<p>
-	   5. <i>ibid</i>. no. 27, p. 394.<p>
+	   5. <i>ibid</i>. no. 27, p. 394.<p> 
 	   6. <i>ibid</i>. p. 419.<p>
-	   7. <i>ibid</i>. pp. 379-80.<p>
+	   7. <i>ibid</i>. pp. 379-80.<p> 
 	   8. <i>ibid</i>. no. 28, p. 3.
 	   </small></td>
 </tr>
@@ -90,11 +90,11 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p318">318</a></center><p>
-	   * see <i>God Passes By</i>, p. 151.<p>
+	   * see <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para132">p. 151</a>.<p>
 	   <hr>
-	   9. Unpublished compilation, National Archives Committee, no. 27, p. 297.<p>
-	   10. <i>ibid</i>. no. 28, pp. 7-8.<p>
-	   11. <i>ibid</i>. no. 27, p. 226.<p>
+	   9. Unpublished compilation, National Archives Committee, no. 27, p. 297.<p> 
+	   10. <i>ibid</i>. no. 28, pp. 7-8.<p> 
+	   11. <i>ibid</i>. no. 27, p. 226.<p> 
 	   12. <i>ibid</i>. no. 15, p. 395.
 	   </small></td>
 </tr>
@@ -111,7 +111,7 @@
 	   <hr>
 	   13. <i>Hidden Words</i>, Persian no. <a href="../../../Baha/HiddenWords.html#persian11">11</a>.<p>
 	   14. Unpublished compilation, National Archives Committee, no. 28, p. 190.<p>
-	   15. <i>ibid</i>. no. 27, p. 230.<p>
+	   15. <i>ibid</i>. no. 27, p. 230.<p> 
 	   16. <i>ibid</i>. no. 28, p. 191.
 	   </small></td>
 </tr>
@@ -132,14 +132,14 @@
        <td>
 	   applied by the individual believer as well as by the institutions of the Faith plays a major part in the protection and promotion of the Cause of God.<p>
 	   Bahá'u'lláh has urged the Hands of the Cause to be vigilant and help the friends to avoid taking any action which might adversely affect the interests of the Faith. We cite two examples. In a previous volume* we have described how some time after the <i>Kitáb-i-Aqdas</i> was revealed Bahá'u'lláh allowed Jamál-i-Burújirdí† to copy certain parts of it and take them with him to Persia. At some point Jamál advocated the establishment of the local Houses of Justice enjoined in the <i>Kitáb-i-Aqdas</i>. The Hand of the Cause Mullá 'Alí-Akbar sought guidance from Bahá'u'lláh on this issue. In a Tablet<small><sup>18</sup></small> to him Bahá'u'lláh responded by stating that the application of any of His laws was conditional upon the exercise of wisdom. He explained that the establishment of this institution was not timely, because should the enemies of the Cause discover it, they would create a commotion, the elected members would become targets and their lives would be in great danger. He envisaged that these institutions would be formed at a later time when conditions became more favourable. Furthermore, He affirmed that because of the immaturity and perversity of the public, and for the protection of the believers, He had not required them to implement most of the laws of the <i>Kitáb-i-Aqdas</i>. The main reason for the dispatch of a copy to Persia was that a record of the laws might be kept in the hands of the friends.<p>
-	   Another example in the exercise of prudence and wisdom may be found in a Tablet<small><sup>19</sup></small> to the same Mullá 'Alí-Akbar. This concerns the printing of Bahá'u'lláh's Writings, for which he had asked permission. While stating that this matter ought to be resolved through consultation, Bahá'u'lláh advised caution and prudence. He explained that it was not wise at that time to print books, because should a large number of books become available, the enemies of the Cause (who were waiting for an excuse) could
+	   Another example in the exercise of prudence and wisdom may be found in a Tablet<small><sup>19</sup></small> to the same Mullá 'Alí-Akbar. This concerns the printing of Bahá'u'lláh's Writings, for which he had asked permission. While stating that this matter ought to be resolved through consultation, Bahá'u'lláh advised caution and prudence. He explained that it was not wise at that time to print books, because should a large number of books become available, the enemies of the Cause (who were waiting for an excuse) could 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p321">321</a></center><p>
 	   * see vol. 3, p. <a href="../V3/p275-307Ch13.html#p280">280</a>.<p>
 	   † see <a href="../V2/p469-476Index.html#Jamál-i-Burújirdí">vol. 2</a> and above, pp. <a href="p145-160Ch09.html">145</a>, <a href="p177-189Ch12.html#p188">188</a>, <a href="p239-256Ch17.html#p254">254</a>.<p>
 	   <hr>
-	   18. Unpublished compilation, National Archives Committee, no. no. 28, p. 179.<p>
+	   18. Unpublished compilation, National Archives Committee, no. no. 28, p. 179.<p> 
 	   19. <i>ibid</i>. no. 15, pp. 423-4.
 	   </small></td>
 </tr>
@@ -159,8 +159,8 @@
        <td>
 	   <blockquote>away from God's decree? On the contrary one has to speed up towards Him.<small><sup>20</sup></small></blockquote>
 	   Hájí Mírzá Haydar-'Alí, the chronicler of this story, concludes by saying, 'Mullá 'Alí-Akbar spoke so convincingly that those present felt ashamed, and recognized that their advice to him indicated a lack of understanding of reliance upon God on their part.'<p>
-	   <b>How Tablets were Delivered to their Recipients</b><p>
-	   Bahá'u'lláh's Tablets were usually revealed in honour of known individual Bahá'ís, whose names were inscribed in them. However, sometimes the name of the intended recipient was not given, or sometimes it would be given in abbreviated form. In such a case the individual might receive the Tablet intended for him in an unusual way. For example, in a previous volume* we noted that Bahá'u'lláh revealed a Tablet without a name but intended for Hájí Muhammad-Táhir-i-Málmírí when he was only a child, and he received this Tablet in a mysterious way almost twenty years later. Sometimes Bahá'u'lláh used to send a few Tablets without names to a well-known Bahá'í, asking him to give each to any one of the believers he felt moved to give them to. Those who received a Tablet in this way discovered that Bahá'u'lláh had indeed intended it for them. Bahá'u'lláh, in a Tablet<small><sup>21</sup></small> revealed in honour of the Hand of the Cause Ibn-i-Asdaq and written in the words of His amanuensis, issued certain instructions as how to deliver nine Tablets without names to nine individuals whose names were supplied in a separate list without indicating which Tablet belonged to whom. The reason for not inscribing the names of the recipients on the Tablets, was to protect the believers from the enemies, who were anxious to know the identity of the members of the Bahá'í community. The instructions of Bahá'u'lláh, as conveyed by His amanuensis, were for Ibn-i-Asdaq first to carry out certain devotions, then to position the Tablets in a high place, and while turning his heart
+	   <b>How Tablets were Delivered to their Recipients</b><p> 
+	   Bahá'u'lláh's Tablets were usually revealed in honour of known individual Bahá'ís, whose names were inscribed in them. However, sometimes the name of the intended recipient was not given, or sometimes it would be given in abbreviated form. In such a case the individual might receive the Tablet intended for him in an unusual way. For example, in a previous volume* we noted that Bahá'u'lláh revealed a Tablet without a name but intended for Hájí Muhammad-Táhir-i-Málmírí when he was only a child, and he received this Tablet in a mysterious way almost twenty years later. Sometimes Bahá'u'lláh used to send a few Tablets without names to a well-known Bahá'í, asking him to give each to any one of the believers he felt moved to give them to. Those who received a Tablet in this way discovered that Bahá'u'lláh had indeed intended it for them. Bahá'u'lláh, in a Tablet<small><sup>21</sup></small> revealed in honour of the Hand of the Cause Ibn-i-Asdaq and written in the words of His amanuensis, issued certain instructions as how to deliver nine Tablets without names to nine individuals whose names were supplied in a separate list without indicating which Tablet belonged to whom. The reason for not inscribing the names of the recipients on the Tablets, was to protect the believers from the enemies, who were anxious to know the identity of the members of the Bahá'í community. The instructions of Bahá'u'lláh, as conveyed by His amanuensis, were for Ibn-i-Asdaq first to carry out certain devotions, then to position the Tablets in a high place, and while turning his heart 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p323">323</a></center><p>
@@ -249,7 +249,7 @@
        <td>
 	   	   <FORM ACTION="p294-314Ch20.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -257,12 +257,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p329-350Ch22.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
