--- a/Baha'i/Others/ROB/V4/p329-350Ch22.html
+++ b/Baha'i/Others/ROB/V4/p329-350Ch22.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p315-328Ch21.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p351-367Ch23.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -35,7 +35,7 @@
 <tr>
        <td width="80%"><center><img src="../Media/22.jpg" border="0" alt="22" align="middle"></center><p>
 	   <center><h2>'For the Advancement of the World'</h2>
-   	   <big><big><i>Lawh-i-Dunyá</i></big></big><p>
+   	   <big><big><i>Lawh-i-Dunyá</i></big></big><p>	   
 	   </center><p>
 	   <b>Áqá Mírzá Áqáy-i-Afnán (Núru'd-Dín)</b><p>
 	   This Tablet* was revealed in 1891 in honour of Áqá Mírzá Áqáy-Afnán, entitled Núru'd-Dín. His mother was a sister of Khadíjih Bagum, the wife of the Báb,† and Áqá Mírzá Áqá was born two years before His Declaration. In a Tablet to His wife revealed in the prison of Máh-Kú the Báb assures her that when Áqá Mírzá Áqá reaches the age of maturity he will be her helper and protector. These prophetic words of the Báb were fulfilled, for Áqá Mírzá Áqá dedicated his life to the service of his beloved aunt, whom he revered and served with unbounded devotion. Khadíjih Bagum lovingly taught him the Faith and at the age of thirteen Áqá Mírzá Áqá recognized the truth of the Mission of the Báb. It was through his efforts that Hájí Mírzá Siyyid Muhammad, the eldest maternal uncle of the Báb, went to meet Bahá'u'lláh in Baghdád and as a result became the recipient of the <i>Kitáb-i-Íqán</i> which assured him of the truth of the Báb's Revelation.<p>
@@ -44,8 +44,11 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p329">329</a></center><p>
    	   * The full text revealed in Persian has been translated into English and is published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para248">pp. 83</a>-97.<p>
-	   † For some details of her noble life see vol. 2, pp. <a href="../V2/p370-387Ch17.html#p382">382</a>-7.<p>
+	   † For some details of her noble life see vol. 2, pp. <a href="../V2/p370-387Ch17.html#p382">382</a>-7.<p> 
 	   ‡ For details see vol. 1, pp. <a href="../V1/p153-197Ch10.html">153</a>-9.
+	   <hr>
+	   <hr>
+	   [Lawh-i-Dunyá] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>
 	   </small></td>
 </tr>
 <tr>
@@ -55,7 +58,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p330">330</a></center><p>
-	   * For details see <a href="p429-431Apndx_II.html">Appendix 2</a>.<p>
+	   * For details see <a href="p429-431Apndx_II.html">Appendix 2</a>.<p> 
 	   † see below, pp. <a href="p391-412Ch25.html#p404">404</a>-6.<p>
 	   ‡ see above, pp. <a href="p274-293Ch19.html#p284">284</a>-5.<p>
 	   § In the East the Declaration of the Báb is celebrated according to the lunar calendar. Since there are eleven days' difference between the lunar and the solar calendars, the dates are different each year.<p>
@@ -90,8 +93,8 @@
 	   One of his sons Hájí Mírzá Habíbu'lláh, who was then fifteen years of age, has recorded in his memoirs some interesting anecdotes of their pilgrimage. The following are extracts from his notes summarized and translated:<p>
 	   <blockquote>
 	   When the ship reached Haifa the very thought of prostrating ourselves at His threshold and attaining His presence which the Prophets and His chosen ones had wished to attain invoked such eagerness and excitement in our hearts that with tears streaming down our cheeks, we were transported into a different world. We arrived at a spot where the souls of all the Manifestations of God were circumambulating day and night around His Blessed Person. My eldest brother, Áqá Siyyid Áqá, who had previously attained the presence of Bahá'u'lláh, taught us how to conduct ourselves in that holy presence with absolute humility, servitude and utter self-effacement...<p>
-	   I remember clearly that the sun had not yet fully risen, the air was fresh and vivifying as we were led to His Blessed tent which was pitched at the foot of Mount Carmel*...Our wish was truly fulfilled when our guide pushed the curtain aside and we beheld the most holy Figure of the Blessed Beauty standing in the middle of the room.†<p>
-	   On our right sat Mírzá Áqá Ján in front of a samovar. Bahá'u'lláh ordered tea for us and then the Tongue of
+	   I remember clearly that the sun had not yet fully risen, the air was fresh and vivifying as we were led to His Blessed tent which was pitched at the foot of Mount Carmel*...Our wish was truly fulfilled when our guide pushed the curtain aside and we beheld the most holy Figure of the Blessed Beauty standing in the middle of the room.†<p> 
+	   On our right sat Mírzá Áqá Ján in front of a samovar. Bahá'u'lláh ordered tea for us and then the Tongue of 
 	   </blockquote>
 	   </td>
        <td></td>
@@ -229,7 +232,7 @@
 	   <blockquote>We have ere this uttered these sublime words: Let them that bear allegiance to this Wronged One be even as a raining cloud in moments of charity and benevolence and as a blazing fire in restraining their base and appetitive natures.<small><sup>7</sup></small></blockquote>
 	   In this Tablet Bahá'u'lláh promulgates some of His Teachings aimed at the reconstruction of human society. These mostly reiterate teachings previously revealed, such as the establishment of an international language, promotion of fellowship among all peoples, and the education of children. He attaches great importance to agriculture, recommends the establishment of constitutional government, condemns the actions of the 'unbelievers and the faithless'--an allusion to the enemies of the Faith in Persia--who 'have set their minds' on 'the shedding of blood', 'the burning of books', 'the shunning of the followers of other religions' and 'the extermination of other communities and groups'. He reproaches the Shí'ah sect of Islám for their 'foul imprecations' when they 'invoke the word <i>Mal'ún</i> (accursed)--uttered with a guttural sound of the letter <i>ayn'</i>.* He beseeches God, however, to 'guide aright' these people, and 'to purge them of unseemly conduct'.<p>
 	   He further expresses astonishment at the people of Persia, for it was reported to Him that 'a certain person went to the seat of the imperial throne in Persia and succeeded in winning the good grace of some of the nobility by his ingratiating behaviour'. This is a reference to Siyyid Jamálu'd-Din-i-Afghání, a brief outline of whose notorious activities is given elsewhere in this book.†<p>
-	   In the <i>Lawh-i-Dunyá</i> Bahá'u'lláh calls on the ministers of the House of Justice 'to promote the Lesser Peace...' Although the Universal House of Justice is not yet fully known to mankind, it
+	   In the <i>Lawh-i-Dunyá</i> Bahá'u'lláh calls on the ministers of the House of Justice 'to promote the Lesser Peace...' Although the Universal House of Justice is not yet fully known to mankind, it 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p341">341</a></center><p>
@@ -331,7 +334,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p348">348</a></center><p>
 	   <hr>
-	   12. <i>God Passes By</i>, pp. 201-2.
+	   12. <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para245">201</a>-2.
 	   </small></td>
 </tr>
 <tr>
@@ -339,7 +342,7 @@
 	   describes the two events. Because He addresses <i>The Times</i> of London in this Tablet, it is referred to as the '<i>Tablet to The Times</i>'. In the opening paragraph Bahá'u'lláh states that the martyrdom of the seven and the imprisonment of the two have created the most joyous jubilation among the Concourse on High. He describes in glowing terms the festive mood among the inmates of the highest paradise as they rejoice and celebrate with exceeding gladness the victory of the triumphant martyrs over their adversaries. Neither the onslaught of the bloodthirsty tyrant nor the fury of the beastly oppressor had succeeded in dampening their faith and enthusiasm or extinguishing the fire of the love of their Lord within their hearts. Their steadfastness in the face of such brutal treatment had endowed the Faith with enormous potentialities.<p>
 	   In this Tablet Bahá'u'lláh describes the circumstances of the martyrdom of the seven in detail, and recounts the story of each. Of Mullá 'Alíy-i-Sabzavárí, one of the seven, Bahá'u'lláh says that this great man of God proclaimed the Cause of God at the very moment of martyrdom, and testified to its truth with his own life-blood. Just before he was beheaded, he cried aloud to the teeming multitudes who had assembled around him, these soul-stirring words: 'At the time of his martyrdom on the plane of Karbilá, Imám Husayn, the Prince of Martyrs, called out to those around him: "Is there any one capable of helping, to help me." And I say to you: Is there any one capable of beholding, to behold me!'* Bahá'u'lláh showers His praise and blessings upon him for these words.<p>
 	   This Tablet is significant for its portrayal of the sufferings and persecutions which the people of Persia inflicted upon the believers. Only a small part of this Tablet to <i>The Times</i> has so far been translated into English:<p>
-	   <blockquote>O 'Times', O thou endowed with the power of utterance! O</blockquote>
+	   <blockquote>O 'Times', O thou endowed with the power of utterance! O</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p349">349</a></center><p>
@@ -368,7 +371,7 @@
        <td>
 	   	   <FORM ACTION="p315-328Ch21.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -376,12 +379,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p351-367Ch23.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
