--- a/Baha'i/Others/ROB/V4/p351-367Ch23.html
+++ b/Baha'i/Others/ROB/V4/p351-367Ch23.html
@@ -45,6 +45,8 @@
 	   † see vol. 3, pp. <a href="../V3/p001-031Ch01.html#p28">28</a>-31.
 	   <hr>
 	   <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html">p. 1</a>
+	   <hr>
+	   [Lawh-i-Karmil] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para292">p. 219</a>
 	   </small></td>
 </tr>
 <tr>
@@ -158,7 +160,7 @@
 <tr>
        <td>
 	   <blockquote>Vineyard', the home of Elijah, extolled by Isaiah as the 'mountain of the Lord', to which 'all nations shall flow'.<small><sup>11</sup></small></blockquote>
-	   An eye-witness has explained that while Bahá'u'lláh was facing the East and 'Abdu'l-Bahá the West, the Tongue of Grandeur ssued instructions to the Master to arrange the transportation of the remains of the Báb from Persia to the Holy Land and their interment in a mausoleum below the clump of cypress trees at a spot which He indicated with His hand. Thus the initial step for this holy enterprise was undertaken by Bahá'u'lláh Himself.<p>
+	   An eye-witness has explained that while Bahá'u'lláh was facing the East and 'Abdu'l-Bahá the West, the Tongue of Grandeur issued instructions to the Master to arrange the transportation of the remains of the Báb from Persia to the Holy Land and their interment in a mausoleum below the clump of cypress trees at a spot which He indicated with His hand. Thus the initial step for this holy enterprise was undertaken by Bahá'u'lláh Himself.<p>
 	   It took almost eight years before 'Abdu'l-Bahá was able to arrange the transfer of the remains of the Báb. The casket containing the sacred remains arrived in 'Akká on 31 January 1899. Ten years later on Naw-Rúz* 1909 'Abdu'l-Bahá, with His own hands and in the presence of believers from East and West, placed the wooden casket inside a marble sarcophagus which was lowered into the vault built especially for it inside one of the six rooms constructed by 'Abdu'l-Bahá for this purpose.† In a Tablet He conveyed this good news to the believers in these words:<p>
 	   <blockquote>The most joyful tidings is this, that the holy, the luminous body of the Báb...after having for sixty years been transferred from place to place, by reason of the ascendancy of the enemy, and from fear of the malevolent, and having known neither rest nor tranquillity has, through the mercy of the Abhá Beauty, been ceremoniously deposited, on the day of Naw-Rúz, within the sacred casket, in the exalted Shrine on Mt. Carmel...By a strange coincidence, on that same day of Naw-Rúz a cablegram was received from Chicago, announcing that the believers in each of the American centers had elected a delegate and sent to that city...and definitely decided on the site and construction of the Mashriqu'l-Adhkár.<small><sup>12</sup></small></blockquote>
 	   In 1948 preparations were begun by Shoghi Effendi for the 
@@ -168,8 +170,8 @@
    	   * Bahá'í New Year, 21 March.<p>
 	   † For more details see vol. 3, <a href="../V3/p422-432Apndx_I.html">Appendix 1</a><p>
 	   <hr>
-	   11. <i>God Passes By</i>, p. 194.<p>
-	   12. Quoted by Shoghi Effendi, <i>God Passes By</i>, p. 276.
+	   11. <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para228">p. 194</a>.<p>
+	   12. Quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p235-320ThirdPeriod.html#para87">p. 276</a>.
 	   <hr>
 	   [Naw-Rúz] <i><a href="../../../Baha/KA/p258-296Index.html#Naw-Rúz">The Kitáb-i-Aqdas</a></i>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para225">p. 67</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../V1/p351-363Index.html#Naw-Rúz">1</a>, <a href="../V2/p469-476Index.html#Naw-Rúz">2</a>, <a href="../V3/p467-483Index.html#Naw-Rúz">3</a>, <a href="../V4/p463-485Index.html#Naw-Rúz">4</a><p>
 	   </small></td>
@@ -288,7 +290,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p365">365</a></center><p>
 	   <hr>
-	   17. <i>God Passes By</i>, p. 348.
+	   17. <i>God Passes By</i>, <a href="../../../SE/GPB/p321-401FourthPeriod.html#para43">p. 348</a>.
 	   </small></td>
 </tr>
 <tr>
