--- a/Baha'i/Others/ROB/V4/p368-390Ch24.html
+++ b/Baha'i/Others/ROB/V4/p368-390Ch24.html
@@ -212,7 +212,7 @@
 	   21. <i>ibid</i>. <a href="../../../Baha/EW/p001-182.html#para200">p. 137</a>.<p>
 	   22. <i>ibid</i>. <a href="../../../Baha/EW/p001-182.html#para197">p. 135</a>.
 	   <hr>
-	   ["Say: O people of God!..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para335">p. 120</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="p011-032Ch02.html#p18">p. 18</a>
+	   ["Say: O people of God!..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para335">p. 120</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="p011-032Ch02.html#p18">p. 18</a>	   
 	   </small></td>
 </tr>
 <tr>
@@ -393,7 +393,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p387">387</a></center><p>
 	   <hr>
-	   35. <i>God Passes By</i>, p. 201.
+	   35. <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para244">p. 201</a>.
 	   </small></td>
 </tr>
 <tr>
