--- a/Baha'i/Others/ROB/V4/p432-440Apndx_III.html
+++ b/Baha'i/Others/ROB/V4/p432-440Apndx_III.html
@@ -16,7 +16,7 @@
        <td>
 	   	   <FORM ACTION="p429-431Apndx_II.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -24,12 +24,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p441-445Biblio.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -37,7 +37,7 @@
 <table border="1" cellspacing="2" cellpadding="2" height="100" bgcolor="">
 <tr>
        <td><center>APPENDIX III</center><p>
-	   <center><h2>Notes for the Study of<br>
+	   <center><h2>Notes for the Study of<br> 
 	   <i><a href="../../../Baha/EW/Cover.html">Epistle to the Son of the Wolf</a></i></h2></center><p>
 	   In the diversity of its topics, in the profundity of its arguments, in the sublimity of its style, in the compelling force of its challenges, and in the hidden significances of its allusions, this book assumes a very special position among the Writings of the Author of the Faith. The study of such a work requires some background knowledge of history and religious terminology.<p>
 	   These notes are intended to provide a brief explanation of some of the terms used in <i>Epistle to the Son of the Wolf</i>. Since many of its themes have already been discussed in the four volumes of <i>The Revelation of Bahá'u'lláh</i>, references are given mainly to these volumes. To enlarge the scope of information, references to other works are supplied where necessary. The page numbers shown in the left-hand column are from <i>Epistle to the Son of the Wolf</i> (ESW), Wilmette, Bahá'í Publishing Trust, 1962 edition; vols. 1, 2, 3, refer to <i>The Revelation of Bahá'u'lláh</i>, while 'above, p. 000', refers to the page number in this present volume.
@@ -145,7 +145,7 @@
 </tr>
 <tr>
        <td VALIGN=top><a name="20"/>20-21</td>
-       <td><i>'The attempt upon the life of His Majesty...to the dungeon...'</i> See <i>God Passes By</i>, pp. 61-72, and vol. 1, pp. <a href="../V1/p007-011Ch01.html">7</a>-11.</td>
+       <td><i>'The attempt upon the life of His Majesty...to the dungeon...'</i> See <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p001-086FirstPeriod.html#p61">61</a>-72, and vol. 1, pp. <a href="../V1/p007-011Ch01.html">7</a>-11.</td>
        <td></td>
 </tr>
 <tr>
@@ -155,7 +155,7 @@
 </tr>
 <tr>
        <td VALIGN=top><a name="32b"/>32</td>
-       <td><i>'Crimson Book'</i> usually refers to the <i>Kitáb-i-'Ahd</i>, Bahá'u'lláh's Will and Testament. In this instance He writes, <i>'A word...recorded...in the Crimson Book which is capable of fully disclosing that force which is hid in men...'</i> This passage may be a reference to this verse in the <i>Kitáb-i-'Ahd</i>: 'O Ye My Branches! A mighty force, a consummate power lieth concealed in the world of being...'</td>
+       <td><i>'Crimson Book'</i> usually refers to the <i>Kitáb-i-'Ahd</i>, Bahá'u'lláh's Will and Testament. In this instance He writes, <i>'A word...recorded...in the Crimson Book which is capable of fully disclosing that force which is hid in men...'</i> This passage may be a reference to this verse in the <i>Kitáb-i-'Ahd</i>: 'O Ye My Branches! A mighty force, a consummate power lieth concealed in the world of being...'; <i>God Passes By</i>, <a href="../../../SE/GPB/p235-320ThirdPeriod.html#para6">p. 238</a></td>
        <td></td>
 </tr>
 <tr>
@@ -185,7 +185,7 @@
 </tr>
 <tr>
        <td VALIGN=top><a name="68b"/>68</td>
-       <td><i>'Mírzá Husayn Khán, Mushíru'd-Dawlih.'</i> Persian ambassador to Constantinople, see <a href="../V2/p469-476Index.html#HusaynKhán,HájíMírzá">vol. 2</a>, vol. 3, pp. <a href="../V3/p204-220Ch10.html#p218">218</a>-19.</td>
+       <td><i>'Mírzá Husayn Khán, Mushíru'd-Dawlih.'</i> Persian ambassador to Constantinople, see <a href="../V2/p469-476Index.html#HusaynKhán,HájíMírzá">vol. 2</a>, vol. 3, pp. <a href="../V3/p204-220Ch10.html#p218">218</a>-19; <i>God Passes By</i>, p. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para119">146</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para146">159</a>.</td>
        <td></td>
 </tr>
 <tr>
@@ -240,22 +240,22 @@
 </tr>
 <tr>
        <td VALIGN=top><a name="73c"/>73</td>
-       <td><i>'his honour Badí'</i>, see vol. 3, <a href="../V3/p174-203Ch09.html">Chapter 9</a>.</td>
+       <td><i>'his honour Badí'</i>, see vol. 3, <a href="../V3/p174-203Ch09.html">Chapter 9</a>; <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para240">p. 199</a>.</td>
        <td></td>
 </tr>
 <tr>
        <td VALIGN=top><a name="73d"/>73</td>
-       <td><i>'his honour Najaf-'Alí'</i>, see vol. 2, pp. <a href="../V2/p222-235Ch10.html">222</a>-3.</td>
+       <td><i>'his honour Najaf-'Alí'</i>, see vol. 2, pp. <a href="../V2/p222-235Ch10.html">222</a>-3; <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para190">p. 178</a>.</td>
        <td></td>
 </tr>
 <tr>
        <td VALIGN=top><a name="73e"/>73</td>
-       <td><i>'Mullá 'Alí-Ján'</i>, see above, pp. <a href="p368-390Ch24.html#p386">386</a>-7.</td>
+       <td><i>'Mullá 'Alí-Ján'</i>, see above, pp. <a href="p368-390Ch24.html#p386">386</a>-7; <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para244">p. 201</a>.</td>
        <td></td>
 </tr>
 <tr>
        <td VALIGN=top><a name="73f"/>73</td>
-       <td><i>'Abá-Basír and Siyyid Ashraf-i-Zanjání'</i>, see vol. 2, pp. <a href="../V2/p222-235Ch10.html#p223">223</a>-32.</td>
+       <td><i>'Abá-Basír and Siyyid Ashraf-i-Zanjání'</i>, see vol. 2, pp. <a href="../V2/p222-235Ch10.html#p223">223</a>-32; ; <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para241">p. 199</a>; <i>Gleanings from the Writings of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#p135">p. 135</a>.</td>
        <td></td>
 </tr>
 <tr>
@@ -430,7 +430,7 @@
 </tr>
 <tr>
        <td VALIGN=top><a name="135b"/>135-9</td>
-       <td><i>'Crimson Ark'</i>, mentioned in the Qayyum-i-Asma, its occupants are the people of Bahá. See <i>God Passes By</i>, p. 23.</td>
+       <td><i>'Crimson Ark'</i>, mentioned in the Qayyum-i-Asma, its occupants are the people of Bahá. See <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para37">p. 23</a>.</td>
        <td></td>
 </tr>
 <tr>
@@ -455,7 +455,7 @@
 </tr>
 <tr>
        <td VALIGN=top><a name="142"/>142</td>
-       <td><i>'his honour, 'Azím'</i>, Mullá 'Alí, a well-known disciple of the Báb. See <i>The Dawn-Breakers</i>, under 'Azím' in index.</td>
+       <td><i>'his honour, 'Azím'</i>, Mullá 'Alí, a well-known disciple of the Báb. See <i>The Dawn-Breakers</i>, under 'Azím' in index; <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para47">p. 28</a>.</td>
        <td></td>
 </tr>
 <tr>
@@ -575,7 +575,7 @@
 </tr>
 <tr>
        <td VALIGN=top><a name="173b"/>173</td>
-       <td><i>'Mírzá Ahmad'</i>, a reference to Mullá 'Abdu'l Karím-i-Qazvíní, a trusted disciple of the Báb. See <i>The Dawn-Breakers</i>, pp. 504-5, God Passes By, p. 51, and vol. 1, pp. <a href="../V1/p053-070Ch05.html">53</a>-4.</td>
+       <td><i>'Mírzá Ahmad'</i>, a reference to Mullá 'Abdu'l Karím-i-Qazvíní, a trusted disciple of the Báb. See <i>The Dawn-Breakers</i>, pp. 504-5, <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para79">p. 51</a>, and vol. 1, pp. <a href="../V1/p053-070Ch05.html">53</a>-4.</td>
        <td></td>
 </tr>
 <tr>
@@ -635,7 +635,7 @@
        <td>
 	   	   <FORM ACTION="p429-431Apndx_II.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -643,12 +643,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p441-445Biblio.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
