--- a/Baha'i/Others/ROB/V4/p441-445Biblio.html
+++ b/Baha'i/Others/ROB/V4/p441-445Biblio.html
@@ -105,7 +105,7 @@
 	   <blockquote>
 	   <i>Citadel of Faith: Messages to America</i> 1947-1957. Wilmette, Illinois: Bahá'í Publishing Trust, RP 1980.<p>
 	   <i>Dawn of a New Day: Messages to India</i> 1923-1957. New Delhi: Bahá'í Publishing Trust, 1970.<p>
-	   <i>God Passes By</i>. Wilmette, Illinois: Bahá'í Publishing Trust, 1944.<p>
+	   <a href="../../../SE/GPB/Cover.html"><i>God Passes By</i></a>. Wilmette, Illinois: Bahá'í Publishing Trust, 1944.<p>
 	   <i>Letters from the Guardian to Australia and New Zealand:</i> 1923-1957. National Spiritual Assembly of the Bahá'ís of Australia 1970.<p>
 	   <i>Messages to the Bahá'í World:</i> 1950-1957. Wilmette, Illinois: Bahá'í Publishing Trust, 1971.<p>
 	   <i>The Promised Day is Come</i>. First published 1941. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn 1961.<p>
