--- a/Baha'i/Others/ROB/V4/p103-117Ch07.html
+++ b/Baha'i/Others/ROB/V4/p103-117Ch07.html
@@ -55,7 +55,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p104">104</a></center><p>
 	   <hr>
-	   1. <i>God Passes By</i>, p. 193.<p>
+	   1. <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para225">p. 193</a>.<p>
 	   2. <i>Áthár-i-Qalam-i-A'lá</i>, vol. 5, p. 135.
 	   </small></td>
 </tr>
@@ -258,7 +258,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p117">117</a></center><p>
 	   <hr>
-	   9. <i>God Passes By</i>, p. 216.
+	   9. <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>.
 	   </small></td>
 </tr>
 </table>
