--- a/Baha'i/Others/ROB/V4/p145-160Ch09.html
+++ b/Baha'i/Others/ROB/V4/p145-160Ch09.html
@@ -43,10 +43,10 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p145">145</a></center><p>
 	   * The full text of this Tablet has been translated into English and published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para294">pp. 101</a>-34.<p>
-	   † For more information about him see <i>God Passes By</i> and <i>Revelation of Bahá'u'lláh</i>, vols. <a href="../V1/p351-363Index.html#Muhammad-'Alí,Mírzá">1</a>, <a href="../V2/p469-476Index.html#Muhammad-'Alí,Mírzá">2</a> and <a href="../V3/p467-483Index.html#Muhammad-'Alí,Mírzá">3</a>.<p>
+	   † For more information about him see <a href="../../../SE/GPB/p235-320ThirdPeriod.html#p244"><i>God Passes By</i></a> and <i>Revelation of Bahá'u'lláh</i>, vols. <a href="../V1/p351-363Index.html#Muhammad-'Alí,Mírzá">1</a>, <a href="../V2/p469-476Index.html#Muhammad-'Alí,Mírzá">2</a> and <a href="../V3/p467-483Index.html#Muhammad-'Alí,Mírzá">3</a>.<p>
 	   ‡ For further information see vol. <a href="../V2/p469-476Index.html#Jamál-i-Burújirdí">2</a>.<p>
 	   <hr>
-	   [Ishráqát] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p089-102Supp.html#p91">p. 91</a>;  <i>The Revelation of Bahá'u'lláh</i> vol. 3 <a href="../V3/p308-321Ch14.html#p319">p. 319</a>
+	   [Ishráqát] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p089-102Supp.html#p91">p. 91</a>; <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>;  <i>The Revelation of Bahá'u'lláh</i> vol. 3 <a href="../V3/p308-321Ch14.html#p319">p. 319</a>, <a href="../../../SE/GPB/p321-401FourthPeriod.html#para123">p. 383</a>
 	   </small></td>
 </tr>
 <tr>
