--- a/Baha'i/Others/ROB/V4/p239-256Ch17.html
+++ b/Baha'i/Others/ROB/V4/p239-256Ch17.html
@@ -55,7 +55,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p240">240</a></center><p>
 	   <hr>
-	   1. <i>God Passes By</i>, p. 193.
+	   1. <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para225">p. 193</a>.
 	   <hr>
 	   <a href="../../../Baha/TOB/p001-270TOB.html#para604"><i>Lawh-i-Ard-i-Bá</i></a>
 	   </small></td>
@@ -89,7 +89,7 @@
        <td VALIGN=top><small><center><a name="p242">242</a></center><p>
 	   * An example of this reverence is given in vol. 2, pp. <a href="../V2/p001-028Ch01.html#p11">11</a>-12.<p>
 	   <hr>
-	   3. <i>God Passes By</i>, pp. 193, 195-6.<p>
+	   3. <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para226">193</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para232">195</a>-6.<p>
 	   4. Unpublished compilation in the handwriting of Zaynu'l-Muqarrabín.
 	   </small></td>
 </tr>
