--- a/Baha'i/Others/ROB/V4/p413-424Ch26.html
+++ b/Baha'i/Others/ROB/V4/p413-424Ch26.html
@@ -120,7 +120,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p418">418</a></center><p>
 	   <hr>
-	   3. <i>God Passes By</i>, pp. 222-3.
+	   3. <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para299">222</a>-3.
 	   </small></td>
 </tr>
 <tr>
