--- a/index.html
+++ b/index.html
@@ -10,41 +10,65 @@
 <h1><center>The Covenant Library</center></h1>
 <center><i>"...immerse yourselves in this Ocean<br>in whose depths lay hidden<br>the pearls of wisdom and of utterance..."</i> <br><small>--Bahá'u'lláh</small></center>
 <h2><center>Table of Contents</center></h2>
+<br><br>
+<table border="0"  width='95%'>
 
-<h3><b><i>Bahá'u'lláh</i></b></h3>
-			<blockquote>
-			<h4><a href="Baha'i/Baha/EW/Cover.html">Epistle to the Son of the Wolf</a></h4>
+<tr>
+       <td><h3><b><i>Bahá'u'lláh</i></b></h3></td>
+       <td><h3><b><i>'Abdu'l-Bahá</i></b></h3></td>
 
-			<h4><a href="Baha'i/Baha/GL/Cover.html">Gleanings From The Writings Of Bahá'u'lláh</a></h4>
+</tr>
+<tr>
+	   <td valign='top'>
+	   	   <h4>
+	   	   <ul type=disc>
+		   	   <li><a href="Baha'i/Baha/EW/Cover.html">Epistle to the Son of the Wolf</a></li>
+   		   	   <li><a href="Baha'i/Baha/GL/Cover.html">Gleanings From The Writings Of Bahá'u'lláh</a></li>
+		   	   <li><a href="Baha'i/Baha/HiddenWords.html">The Hidden Words of Bahá'u'lláh</a></li>
+		   	   <li><a href="Baha'i/Baha/KA/Cover.html">The Kitáb-i-Aqdas</a></li>			   
+		   	   <li><a href="Baha'i/Baha/KI/Cover.html">The Kitáb-i-Íqán</a></li>
+		   	   <li><a href="Baha'i/Baha/PM/Cover.html">Prayers and Meditations</a></li>
+   		   	   <li><a href="Baha'i/Baha/TSVATFV.html">The Seven Valleys and The Four Valleys</a></li>
+		   	   <li><a href="Baha'i/Baha/TOB/Cover.html">Tablets of Bahá'u'lláh</a></li>
+		   </ul>
+		   </h4>
+	   </td>
+	   
+       <td valign='top'>
+	   	   <h4>
+	   	   <ul type=disc>
+		   	   <li><h4><a href="Baha'i/AB/SAQ/Cover.html">Some Answered Questions</a></h4></li>
+		   </ul>
+		   </h4>
+			
+		   <br><br><br>
+			
+		   <h3><b><i>Shoghi Effendi</i></b></h3>
+	   	   <h4>
+	   	   <ul type=disc>
+		   	   <li><h4><a href="Baha'i/SE/GPB/Cover.html">God Passes By</a></h4></li>
+		   </ul>
+		   </h4>
+	   </td>
+</tr>
+</table>
 
-			<h4><a href="Baha'i/Baha/HiddenWords.html">The Hidden Words of Bahá'u'lláh</a></h4>
-
-			<h4><a href="Baha'i/Baha/KA/Cover.html">The Kitáb-i-Aqdas</a></h4>
-
-			<h4><a href="Baha'i/Baha/KI/Cover.html">The Kitáb-i-Íqán</a></h4>
-
-			<h4><a href="Baha'i/Baha/PM/Cover.html">Prayers and Meditations</a></h4>
-
-			<h4><a href="Baha'i/Baha/TSVATFV.html">The Seven Valleys and The Four Valleys</a></h4>
-
-			<h4><a href="Baha'i/Baha/TOB/Cover.html">Tablets of Bahá'u'lláh</a></h4>
-			</blockquote>
-
-<h3><b><i>'Abdu'l-Bahá</i></b></h3>
-			<blockquote>
-			<h4><a href="Baha'i/AB/SAQ/Cover.html">Some Answered Questions</a></h4>
-			</blockquote>
+<br>
 
 <h3><b><i>Others</i></b></h3>
-			<blockquote>
-			<h4>Adib Taherzadeh: The Revelation of Bahá'u'lláh</h4>
-					<blockquote><h4>
-							<a href="Baha'i/Others/ROB/V1/Cover.html">Volume 1: Baghdad 1853-63</a><br>
-							<a href="Baha'i/Others/ROB/V2/Cover.html">Volume 2: Adrianople 1863-68</a><br>
-							<a href="Baha'i/Others/ROB/V3/Cover.html">Volume 3: Akka, The Early Years 1868-77</a><br>
-							<a href="Baha'i/Others/ROB/V4/Cover.html">Volume 4: Mazra'ih & Bahjí 1877-92</a><br>
-					</h3></blockquote>
-			</blockquote>
+     <blockquote>
+          <h4>Adib Taherzadeh: The Revelation of Bahá'u'lláh
+	   	  <ul type=disc>
+		       <li><a href="Baha'i/Others/ROB/V1/Cover.html">Volume 1: Baghdad 1853-63</a></li>
+   		   	   <li><a href="Baha'i/Others/ROB/V2/Cover.html">Volume 2: Adrianople 1863-68</a></li>
+   		   	   <li><a href="Baha'i/Others/ROB/V3/Cover.html">Volume 3: Akka, The Early Years 1868-77</a></li>
+   		   	   <li><a href="Baha'i/Others/ROB/V4/Cover.html">Volume 4: Mazra'ih & Bahjí 1877-92</a></li>
+   		  </ul>
+		  </h4>
+     </blockquote>
+
+
+<br>
 
 <h4><a href="search.html">Search</a></h4>
 
@@ -52,6 +76,6 @@
 
 <h4><a href="about.html">About</a></h4>
 
-<small><p><i>The Covenant Library</i>, version 1.9.0.<p><p>
+<small><p><i>The Covenant Library</i>, version 1.10.0.<p><p>
 </body>
 </html>
