--- a/Baha'i/Baha/HiddenWords.html
+++ b/Baha'i/Baha/HiddenWords.html
@@ -31,10 +31,8 @@
 <p><small>
 <b>Misc. References to <i>The Hidden Words</i></b>:
 <br>
-<i>The Revelation of Bahá'u'lláh</i>, 
-vol. 1, <a href="../Others/ROB/V1/p071-083Ch06.html">Chapter 6</a>,
-vol. 2, <a href="../Others/ROB/V2/p029-054Ch02.html">p. 29</a>,
-vol. 4, <a href="../Others/ROB/V4/p050-072Ch04.html#p53">p. 53</a>
+<i>The Revelation of Bahá'u'lláh</i>, vol. 1, <a href="../Others/ROB/V1/p071-083Ch06.html">Chapter 6</a>, vol. 2, <a href="../Others/ROB/V2/p029-054Ch02.html">p. 29</a>, vol. 4, <a href="../Others/ROB/V4/p050-072Ch04.html#p53">p. 53</a><br>
+<i>God Passes By</i>, <a href="../SE/GPB/p087-234SecondPeriod.html#para70">p. 121</a>, <a href="../SE/GPB/p235-320ThirdPeriod.html#para49">p. 260</a>, <a href="../SE/GPB/p321-401FourthPeriod.html#para41">p. 347</a>, <a href="../SE/GPB/p321-401FourthPeriod.html#para119">p. 381</a>, <a href="../SE/GPB/p321-401FourthPeriod.html#para123">p. 383</a> 
 </small>
 
 
@@ -68,6 +66,7 @@ vol. 4, <a href="../Others/ROB/V4/p050-072Ch04.html#p53">p. 53</a>
 	   </td>
 	   <td></td>
        <td VALIGN=top><small><center><a name="arabic2">Arabic #2</a></center><p>
+	   <i>Tablets of Bahá'u'lláh</i>, <a href="TOB/p001-270TOB.html#p37">p. 37</a><p>
 	   <i>The Revelation of Bahá'u'lláh</i>, vol. 3, <a href="../Others/ROB/V3/p275-307Ch13.html#p295">p. 295</a>
 	   </small></td>
 </tr>
@@ -848,6 +847,7 @@ vol. 4, <a href="../Others/ROB/V4/p050-072Ch04.html#p53">p. 53</a>
 	   </td>
 	   <td></td>
        <td VALIGN=top><small><center><a name="persian19">Persian #19</a></center><p>
+	   ["tree of life"} <i>God Passes By</i>, <a href="../SE/GPB/p235-320ThirdPeriod.html#para8">p. 239</a><p>
 	   <i>The Revelation of Bahá'u'lláh</i>, vol. 1, <a href="../Others/ROB/V1/p071-083Ch06.html#p80">p. 80</a></small>
 	   </td>
 </tr>
