--- a/Baha'i/Baha/TSVATFV.html
+++ b/Baha'i/Baha/TSVATFV.html
@@ -59,10 +59,9 @@
 <small>
 <b>Misc. References to <i>The Seven Valleys And The Four Valleys</i></b>:
 <br>
-<i>The Revelation of Bahá'u'lláh</i>,
-vol. 1, <a href="../Others/ROB/V1/p096-104Ch08.html">Chapter 8</a>, <a href="../Others/ROB/V1/p105-152Ch09.html#p151">p. 151</a>,
-vol. 2, <a href="../Others/ROB/V2/p001-028Ch01.html#p26">p. 26</a>,
-vol. 4, <a href="../Others/ROB/V4/p118-144Ch08.html#p142">p. 142</a>, <a href="../Others/ROB/V4/p177-189Ch12.html#p181">p. 181</a>
+<i>The Revelation of Bahá'u'lláh</i>, vol. 1, <a href="../Others/ROB/V1/p096-104Ch08.html">Chapter 8</a>, <a href="../Others/ROB/V1/p105-152Ch09.html#p151">p. 151</a>, vol. 2, <a href="../Others/ROB/V2/p001-028Ch01.html#p26">p. 26</a>, vol. 4, <a href="../Others/ROB/V4/p118-144Ch08.html#p142">p. 142</a>, <a href="../Others/ROB/V4/p177-189Ch12.html#p181">p. 181</a><br>
+[The Seven Valleys] <i>God Passes By</i>, <a href="../SE/GPB/p087-234SecondPeriod.html#para70">p. 121</a>, <a href="../SE/GPB/p087-234SecondPeriod.html#para111">p. 140</a>, <a href="../SE/GPB/p235-320ThirdPeriod.html#para49">p. 260</a>, <a href="../SE/GPB/p321-401FourthPeriod.html#para123">p. 383</a><br>
+[The Four Valleys] <i>God Passes By</i>, <a href="../SE/GPB/p087-234SecondPeriod.html#para72">p. 122</a>, <a href="../SE/GPB/p087-234SecondPeriod.html#para112">p. 140</a> 
 </small>
 
 
